<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

<ImageView 
    android:id="@+id/garage_door_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:src="@drawable/ic_inapp_status_unknown"
    />

<TextView 
    android:id="@+id/main_ipdomain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:text="@string/ipdomain"
    />

<EditText
    android:id="@+id/ip_domain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:inputType="textUri"
    />

<TextView 
    android:id="@+id/main_port"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/port"
    />

<EditText
    android:id="@+id/port"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:inputType="number"
    />

<Button 
    android:id="@+id/button_connect"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/connect_button_connect"
    android:layout_gravity="center_horizontal"
    />



<TextView
    android:id="@+id/connection_status" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:text="@string/connection_status_disconnected"
    />

<TextView
    android:id="@+id/status_text" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/status_text_unknown"
    />

<CheckBox
    android:id="@+id/crack_door"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Check here to 'crack' garage door"
    android:layout_marginTop="10dp"
    android:checked="false"
    android:enabled="false"
    />

<Button 
    android:id="@+id/button_toggle_door"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:text="Open Garage Door"
    android:layout_gravity="center_horizontal"
    android:enabled="false"
    />



</LinearLayout>

<!-- 

In our layout, we need to have the following items:

(Probably in the following order)

1. An 'image' of a garage door that changes depending on whether it's open, closed, or cracked
2. Text that says ip/domain...or something like that
3. An input field that contains ip/url of the host to connect to
4. Button to connect
5. Text that shows connection status
6. A checkbox that you could check to 'crack' the garage door
7. A button that will actually let you perform the action
8. Status text that (in addition to the image) shows you whether the garage door is open, closed, or cracked

 -->
 
 
 
 
 
 
 